# BarDataIngestion

./: .breakpoints  .replit  Processing_api_call_p2.js  README.md  extract_txt.py  extract_txt_miner.py  extract_txt_miner_with_lines.py  index.js  index2.js  index3.js  indexpdfp2.js  indexpy.js  main.js  mini_extract.py  package-lock.json  package.json  pyproject.toml  remove_newlines.py  replit.nix  simpleMain.js  simpleWorker.js  workerScript.js
.upm/: store.json
notes_later_files/: barai_notes.txt  indexjs_documentation.md  mbe_subject_matter.txt
old_iterations_archive/: extract_txt_miner.py  index.js  index3.js  indexpy.js  simpleMain.js  tokenizer_script.py
pre-processed_folder_test/: Con_Law_with_line_numbers.txt  Contract_with_line_numbers_1.txt  Contract_with_line_numbers_2.txt  con_law_questions_answers.txt
preprocessed_folder_test/: Con_Law_with_line_numbers.txt  Con_Law_with_line_numbers_copy524.txt
preprocessed_folder_test_tiny/: Con_Law_with_line_numbers_tiny.txt
txt_folder/: 300_MBE_QAs1.txt  300_MBE_QAs2.txt  Con_Law.txt  Con_Law_Adaptibar.txt  Con_Law_Adaptibar1.txt  Con_Law_Adaptibar2.txt  Contract.txt  Contracts_Adaptibar2.txt  Contracts_Adaptibar3.txt  Crim_Law.txt  Emanuel2_Con_Law.txt  Emanuel2_Contracts.txt  Emanuel2_Crim_Law_Procedure.txt  Emanuel2_Evidence.txt  Emanuel2_Real_Property.txt  Emanuel2_Torts.txt  Emanuel6_AM_Practice_MBE.txt  Emanuel6_AM_Practice_MBE2.txt  Emanuel6_Civil_Procedure.txt  Emanuel6_Con_Law.txt  Emanuel6_Contracts.txt  Emanuel6_Crim_Law_Procedure.txt  Emanuel6_Evidence.txt  Emanuel6_PM_Practice_MBE1.txt  (+40 more)
(+55 files in other folders)
