[tool.poetry]
name = "repl-nix-bardataingestion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_bardataingestion"}]

[tool.poetry.dependencies]
python = "^3.10"
docx = "^0.2.4"
pdf2image = "^1.17.0"
pytesseract = "^0.3.10"
pdfminer = "^20191125"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
